0.1.1:
New
 - Flywheel driven chest and bell rendering, ~20x performance improvement in contrived cases
Fixes
 - Fix potential crash related to rendering breaking overlay
Technical/API
 - Deprecate instance registration functions in favor of builders
 - Refactor breaking overlay renderer to be cleaner and more contained
 - Move per-world material managers out of WorldContext into InstancedRenderDispatcher

0.1.0:
Fixes
 - Render layer events are always dispatched, even when the backend is disabled
 - Fix a crash when light updates occur close to the world height
 - Fix issue with optifine shaders
 - Fix PartialModels not being initialized

0.0.3:
New
 - Include the logo in the mod
 - Prevent Minecraft from nuking the depth buffer on fabulous graphics
 - Add some more debug information when shader compilation fails
Fixes
 - Fix startup crash with intel drivers
 - Fix startup crash with optifine
 - Fix crash on server start
 - Fix "unknown custom packet identifier" errors
 - Fix crash on resource reload

0.0.2:
New
 - Added /flywheel backend command to replace /create experimentalRendering
 - Added /flywheel normalOverlay command
 - Added basic config
 - New logo (thanks, bumble_dani!)

0.0.1:
 - Initial release